[tool.poetry]
name = "stairwell"
version = "0.0.1"
description = "A Python client for the Stairwell platform."
authors = ["Andrew Liu <liu@stairwell.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
