[tool.poetry]
name = "stairwell"
version = "0.0.2"
description = "A Python client for the Stairwell platform."
authors = ["Andrew Liu <liu@stairwell.com>"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://stairwell.com/"
repository = "https://github.com/stairwell-inc/stairwell-python"
documentation = "https://docs.stairwell.com/"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
