[tool.poetry]
name = "stairwell"
version = "0.0.4"
description = "A Python client for the Stairwell platform."
authors = ["Andrew Liu <liu@stairwell.com>", "MJR <mjr@stairwell.com"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://stairwell.com/"
repository = "https://github.com/stairwell-inc/stairwell-python"
documentation = "https://docs.stairwell.com/"
keywords = ["OpenAPI", "OpenAPI-Generator", "Stairwell V1 HTTP APIs"]
include = ["stairwell_openapi_client/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
aiohttp = ">= 3.8.4"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
